--- a/Stone Lamp/.classpath
+++ b/Stone Lamp/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="src" path="com"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Minecraft"/>
+	<classpathentry kind="lib" path="E:/Development/MC_1_5/forge/mcp/jars/bin/lwjgl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
